Refactor to use records and modern Java features
Replaced several data classes with Java records for immutability and conciseness, updated method calls to use record accessors, and removed unnecessary getters and constructors. Refactored switch statements to enhanced switch expressions and simplified code where possible. These changes improve code readability and leverage modern Java language features.